Fix sub-packages list

--- a/src/storybook/stories/using-respvis/packages.mdx
+++ b/src/storybook/stories/using-respvis/packages.mdx
@@ -16,6 +16,8 @@ available on npm:
 - [respvis-core](https://www.npmjs.com/package/respvis-core): Contains core
   functionality of RespVis which is always necessary when creating a visualization
   with RespVis. It also includes the layouter mechanism.
+- [respvis-tooltip](https://www.npmjs.com/package/respvis-tooltip): Contains the functionality
+  to create tooltip components.
 - [respvis-cartesian](https://www.npmjs.com/package/respvis-cartesian): Contains the
   functionality to create cartesian components.
 - [respvis-bar](https://www.npmjs.com/package/respvis-bar): Contains the functionality
@@ -24,8 +26,8 @@ available on npm:
   to create point components.
 - [respvis-line](https://www.npmjs.com/package/respvis-line): Contains the functionality
   to create line components.
-- [respvis-tooltip](https://www.npmjs.com/package/respvis-tooltip): Contains the functionality
-  to create tooltip components.
+- [respvis-parcoord](https://www.npmjs.com/package/respvis-parcoord): Contains the
+  functionality to create parallel coordinates components.
 
 
 
